# Trees-Everywhere

./: .gitignore  README.md  requirements.txt
trees/: manage.py  pyproject.toml
trees/everywhere/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
trees/everywhere/migrations/: 0002_tree_remove_user_account_account_user_profile_and_more.py  0003_alter_profile_user.py  0005_alter_user_accounts.py  0006_alter_profile_joined.py  0007_alter_profile_joined.py  0008_plantedtree_latitude_plantedtree_longitude.py  0009_alter_profile_joined.py  0010_alter_profile_joined.py
trees/everywhere/templates/: base.html  index.html
trees/everywhere/templates/admin/: account_list.html  menu.html  registration_form.html
trees/everywhere/templates/admin/details/: tree_detail.html
trees/everywhere/templates/admin/forms/: account_form.html  registration_form.html  tree_form.html
trees/everywhere/templates/admin/lists/: account_list.html  tree_list.html
trees/everywhere/templates/registration/: login.html
trees/everywhere/templates/user/: menu.html
trees/everywhere/templates/user/detail/: planted_tree_detail.html
trees/everywhere/templates/user/forms/: planted_tree_forms.html
trees/everywhere/views/api/: views.py
trees/everywhere/views/frontend/: views.py
trees/trees/: settings.py  urls.py
trees/trees/everywhere/: apps.py  models.py  views.py
trees/trees/everywhere/migrations/: 0001_initial.py  0004_user_accounts.py
trees/trees/trees/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
