[tool.poetry]
name = "trees"
version = "0.1.0"
description = ""
authors = ["Lucas Soares <soareslukas9090@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.10"


[tool.ruff]
line-length = 101
extend-exclude = ['migrations', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'double'



[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'py manage.py runserver'
migrations = 'py manage.py makemigrations'
migrate = 'py manage.py migrate'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
